feat(ui): new logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="app-toolbar" *ngIf="!isPlayerActive">
   <div class="toolbar-content">
     <a routerLink="/" class="app-title">
-      <mat-icon class="title-icon" aria-hidden="false" aria-label="Quiz icon">quiz</mat-icon>
+      <img src="assets/images/logo/logo.png" alt="Quiz logo" class="title-logo">
       <span>{{ title }}</span>
     </a>
 
