--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,8 +20,10 @@
     font-size: 1.25rem; // Adjust title size
     font-weight: 500;
 
-    .title-icon {
-      vertical-align: middle; // Align icon nicely
+    .title-logo {
+      height: 32px;
+      width: auto;
+      vertical-align: middle;
     }
   }
 
