--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
   <mat-card class="login-card">
     <mat-card-header>
       <div class="header-content">
-        <mat-icon class="quiz-icon">quiz</mat-icon>
+        <img src="assets/images/logo/logo.png" alt="Quiz logo" class="quiz-logo">
         <mat-card-title>Quiz App</mat-card-title>
         <mat-card-subtitle>Sign in to continue</mat-card-subtitle>
       </div>
