--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -21,11 +21,9 @@
   margin-bottom: 16px;
 }
 
-.quiz-icon {
-  font-size: 64px;
-  width: 64px;
-  height: 64px;
-  color: #667eea;
+.quiz-logo {
+  width: 80px;
+  height: auto;
   margin-bottom: 16px;
 }
 
